--- a/dashboard.html
+++ b/dashboard.html
@@ -5,9 +5,13 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/bootstrap.css" rel="stylesheet">
+        <link href="css/bootflat.css" rel="stylesheet">
+        <link href="css/base.css" rel="stylesheet">
 
     </head>
     <body>
+
+        <button type="button" class="btn btn-danger mt20 center-block">Info</button>
 
     	<!-- JavaScript placed at the end of the document so the pages load faster -->
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
