--- a/review.html
+++ b/review.html
@@ -5,6 +5,8 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/bootstrap.css" rel="stylesheet">
+        <link href="css/bootflat.css" rel="stylesheet">
+        <link href="css/base.css" rel="stylesheet">
 
     </head>
     <body>
