--- a/review.html
+++ b/review.html
@@ -1,18 +1,43 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>NUS Module Tracker</title>
+<head>
+    <title>NUS Module Tracker</title>
 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="css/bootstrap.css" rel="stylesheet">
-        <link href="css/bootflat.css" rel="stylesheet">
-        <link href="css/base.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootflat.css" rel="stylesheet">
+    <link href="css/base.css" rel="stylesheet">
 
-    </head>
-    <body>
+</head>
+<body>
 
-    	<!-- JavaScript placed at the end of the document so the pages load faster -->
-        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-    </body>
+<nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">NUS Modules Tracker</a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="#">Dashboard</a></li>
+            </ul>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Module Reviews</a></li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+
+<!-- JavaScript placed at the end of the document so the pages load faster -->
+<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+</body>
 </html>
