--- a/review.html
+++ b/review.html
@@ -22,16 +22,17 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">NUS Modules Tracker</a>
+            <a class="navbar-brand" href="./dashboard.html">NUS Modules Tracker</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="#">Dashboard</a></li>
+                <li><a href="./dashboard.html">Dashboard</a></li>
             </ul>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Module Reviews</a></li>
+                <li class="active"><a href="./review.html">Module Reviews</a></li>
             </ul>
+            <p class="navbar-text navbar-right"><a class="navbar-link" href="./index.html">Delon Wong Her Laang - Log out</a></p>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
