--- a/dashboard.html
+++ b/dashboard.html
@@ -7,10 +7,11 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/bootflat.css" rel="stylesheet">
     <link href="css/base.css" rel="stylesheet">
-
+    <link href="css/dashboard.css" rel="stylesheet">
 </head>
 <body>
 
+<!-- Nav bar -->
 <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -21,21 +22,35 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">NUS Modules Tracker</a>
+            <a class="navbar-brand" href="./dashboard.html">NUS Modules Tracker</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Dashboard</a></li>
+                <li class="active"><a href="./dashboard.html">Dashboard</a></li>
             </ul>
             <ul class="nav navbar-nav">
-                <li><a href="#">Module Reviews</a></li>
+                <li><a href="./review.html">Module Reviews</a></li>
             </ul>
+            <p class="navbar-text navbar-right"><a class="navbar-link" href="./index.html">Delon Wong Her Laang - Log out</a></p>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
-</nav>
+</nav><!-- /.navbar -->
 
+<div class="row mt20">
+    <div class="col-md-10 col-centered">
+        <!-- Modules list -->
+        <div class="col-md-8 left-column">
+            <div class="modules-container"></div>
+        </div><!-- /.modules-column -->
 
+        <!-- Cap goal setting -->
+        <div class="col-md-4 right-column">
+            <div class="cap-container col-md-12"></div>
+            <div class="suggestion-container col-md-12 mt20"></div>
+        </div><!-- /.cap-column -->
+    </div>
+</div>
 
 <!-- JavaScript placed at the end of the document so the pages load faster -->
 <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
