Done with module suggestions.

--- a/dashboard.html
+++ b/dashboard.html
@@ -41,7 +41,34 @@
     <div class="col-md-10 col-centered">
         <!-- Modules list -->
         <div class="col-md-8 left-column">
-            <div class="modules-container box"></div>
+            <!-- Modules listing -->
+            <div class="modules-container box text-center">
+                <h3>Modules Listing</h3>
+                <div class="year1semester1 text-left">
+                    <h4>Year 1 Semester 1</h4>
+                </div>
+                <div class="year1semester2 text-left">
+                    <h4>Year 1 Semester 2</h4>
+                </div>
+                <div class="year2semester1 text-left">
+                    <h4>Year 2 Semester 1</h4>
+                </div>
+                <div class="year2semester2 text-left">
+                    <h4>Year 2 Semester 2</h4>
+                </div>
+                <div class="year3semester1 text-left">
+                    <h4>Year 3 Semester 1</h4>
+                </div>
+                <div class="year3semester2 text-left">
+                    <h4>Year 3 Semester 2 (Current)</h4>
+                </div>
+                <div class="year4semester1 text-left">
+                    <h4>Year 4 Semester 1</h4>
+                </div>
+                <div class="year4semester2 text-left">
+                    <h4>Year 4 Semester 2</h4>
+                </div>
+            </div>
         </div><!-- /.modules-column -->
 
         <div class="col-md-4 right-column">
