--- a/dashboard.html
+++ b/dashboard.html
@@ -7,6 +7,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/bootflat.css" rel="stylesheet">
     <link href="css/base.css" rel="stylesheet">
+    <link href="css/chosen.css" rel="stylesheet">
     <link href="css/dashboard.css" rel="stylesheet">
 </head>
 <body>
@@ -46,27 +47,86 @@
                 <h3>Modules Listing</h3>
                 <div class="year1semester1 text-left">
                     <h4>Year 1 Semester 1</h4>
+                    <div class="year1semester1-table"></div>
                 </div>
                 <div class="year1semester2 text-left">
                     <h4>Year 1 Semester 2</h4>
+                    <div class="year1semester2-table"></div>
                 </div>
                 <div class="year2semester1 text-left">
                     <h4>Year 2 Semester 1</h4>
+                    <div class="year2semester1-table"></div>
                 </div>
                 <div class="year2semester2 text-left">
                     <h4>Year 2 Semester 2</h4>
+                    <div class="year2semester2-table"></div>
                 </div>
                 <div class="year3semester1 text-left">
                     <h4>Year 3 Semester 1</h4>
+                    <div class="year3semester1-table"></div>
                 </div>
                 <div class="year3semester2 text-left">
                     <h4>Year 3 Semester 2 (Current)</h4>
+                    <div class="year3semester2-table"></div>
+                    <div class="row">
+                        <div class="form-group col-md-5">
+                            <label for="module-select-3-2">Search for module</label>
+                            <select class="chosen-select" data-placeholder="Select a module." id="module-select-3-2" name="module-select">
+                            </select>
+                            <div class="error-message-box"></div>
+                        </div>
+                        <div class="form-group col-md-5">
+                            <label for="module-select-type-3-2">Select Module Type</label>
+                            <select disabled data-placeholder="Select a module type" id="module-select-type-3-2" name="module-select-type">
+                            </select>
+                            <div class="error-message-box"></div>
+                        </div>
+                        <div class="form-group col-md-2 add-module-btn-container">
+                            <button disabled type="button" data-year="3" data-semester="2" class="btn btn-success js-new-module-3-2">Add</button>
+                        </div>
+                    </div>
                 </div>
                 <div class="year4semester1 text-left">
                     <h4>Year 4 Semester 1</h4>
+                    <div class="year4semester1-table"></div>
+                    <div class="row">
+                        <div class="form-group col-md-5">
+                            <label for="module-select-4-1">Search for module</label>
+                            <select class="chosen-select" data-placeholder="Select a module." id="module-select-4-1" name="module-select">
+                            </select>
+                            <div class="error-message-box"></div>
+                        </div>
+                        <div class="form-group col-md-5">
+                            <label for="module-select-type-4-1">Select Module Type</label>
+                            <select disabled data-placeholder="Select a module type" id="module-select-type-4-1" name="module-select-type">
+                            </select>
+                            <div class="error-message-box"></div>
+                        </div>
+                        <div class="form-group col-md-2 add-module-btn-container">
+                            <button disabled type="button" data-year="4" data-semester="1" class="btn btn-success js-new-module-4-1">Add</button>
+                        </div>
+                    </div>
                 </div>
                 <div class="year4semester2 text-left">
                     <h4>Year 4 Semester 2</h4>
+                    <div class="year4semester2-table"></div>
+                    <div class="row">
+                        <div class="form-group col-md-5">
+                            <label for="module-select-4-2">Search for module</label>
+                            <select class="chosen-select" data-placeholder="Select a module." id="module-select-4-2" name="module-select">
+                            </select>
+                            <div class="error-message-box"></div>
+                        </div>
+                        <div class="form-group col-md-5">
+                            <label for="module-select-type-4-2">Select Module Type</label>
+                            <select disabled data-placeholder="Select a module type" id="module-select-type-4-2" name="module-select-type">
+                            </select>
+                            <div class="error-message-box"></div>
+                        </div>
+                        <div class="form-group col-md-2 add-module-btn-container">
+                            <button disabled type="button" data-year="4" data-semester="2" class="btn btn-success js-new-module-4-2">Add</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div><!-- /.modules-column -->
@@ -144,6 +204,7 @@
 <!-- JavaScript placed at the end of the document so the pages load faster -->
 <script src="js/jquery-1.12.0.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/chosen.jquery.min.js"></script>
 <script src="js/dashboard.js"></script>
 </body>
 </html>
