--- a/dashboard.html
+++ b/dashboard.html
@@ -218,6 +218,7 @@
 <script src="js/jquery-1.12.0.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/chosen.jquery.min.js"></script>
+<script src="js/jq-sticky-anything.js"></script>
 <script src="js/dashboard.js"></script>
 </body>
 </html>
