Basic layout done
Modal window to create a new review cannot work

--- a/review.html
+++ b/review.html
@@ -7,7 +7,8 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/bootflat.css" rel="stylesheet">
     <link href="css/base.css" rel="stylesheet">
-
+    <link href="css/chosen.css" rel="stylesheet">
+    <link href="css/review.css" rel="stylesheet">
 </head>
 <body>
 
@@ -36,9 +37,103 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
+    
+<!-- Review listing -->
+<div class="row">
+    <div class="col-md-10 col-centered">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="modules-container box">
+                    <h3>Search for Reviews</h3>
+                    <div class="col-md-8 form-group">
+                        <select disabled class="select-mod form-control" data-placeholder="Select a module" id="module-review-select" name="module-review-select">
+                        </select>
+                    </div>
+                    <div class="form-group col-md-4">
+                        <button disabled type="button" class="btn btn-success">Search</button>
+                    </div>
+                    <div class="row"></div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="modules-container box text-center">
+                    <h3>Filter</h3>
+                    <div class="row">
+                        <div class="col-md-3 form-group">
+                            <label for="sem-taken">Semester :</label>
+                            <select disabled class="form-control" id="sem-taken">
+                                <option value=""></option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                            </select>
+                        </div>
+                        <div class="col-md-3 form-group">
+                            <label for="diff">Difficulty :</label>
+                            <select disabled class="form-control" id="diff">
+                                <option value=""></option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                            </select>
+                        </div>
+                        <div class="col-md-3 form-group">
+                            <label for="recommendation">Rating :</label>
+                            <select disabled class="form-control" id="recommendation">
+                                <option value=""></option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                            </select>
+                        </div>
+                        <div class="col-md-3 form-group">
+                            <button disabled type="button" class="btn btn-success">Go</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-12 modules-container text-center warning-box mt20">
+            <div class="col-md-2"></div>
+            <div class="col-md-7">
+            <h4 id="warning-text">You have not submitted a review yet. To be able to view other user-submitted review, please proceed to make a review first</h4>    
+            </div>
+            <div class="col-md-2"></div>
+            <div class="col-md-5"></div>
+            <div class="col-md-2 center form-group">
+                <button type="button" class="btn btn-success" data-toggle="modal" data-target="#create-review-modal">Submit a review</button>
+                <!--<button type="button" class="btn btn-success" id="submit-review">Submit a review</button>-->
+            </div>
+            <div class="col-md-5"></div>
+        </div>                
+    </div>
+</div>
+    
+<!-- Create review modal -->
+<div id="create-review-modal" class="modal fade" role="dialog">
+    <div class="modal-dialog box">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Create Review</h4>
+            </div>
+            <div class="modal-body">
+                <p>Some content</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-success">Submit</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!-- JavaScript placed at the end of the document so the pages load faster -->
 <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+<script src="js/bootstrap.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/review.js"></script>
 </body>
 </html>
