--- a/review.html
+++ b/review.html
@@ -104,7 +104,7 @@
             <div class="col-md-2"></div>
             <div class="col-md-5"></div>
             <div class="col-md-2 center form-group">
-                <button type="button" class="btn btn-success" data-toggle="modal" data-target="#create-review-modal">Submit a review</button>
+                <button type="button" class="btn btn-success" id="show-modal-btn">Submit a review</button>
                 <!--<button type="button" class="btn btn-success" id="submit-review">Submit a review</button>-->
             </div>
             <div class="col-md-5"></div>
