--- a/review.html
+++ b/review.html
@@ -134,6 +134,7 @@
 <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/chosen.jquery.min.js"></script>
 <script src="js/review.js"></script>
 </body>
 </html>
