--- a/review.html
+++ b/review.html
@@ -46,11 +46,11 @@
                 <div class="modules-container box">
                     <h3>Search for Reviews</h3>
                     <div class="col-md-8 form-group">
-                        <select disabled class="select-mod form-control" data-placeholder="Select a module" id="module-review-select" name="module-review-select">
+                        <select disabled class="select-mod form-control" data-placeholder="Select a module" id="module-review-select">
                         </select>
                     </div>
                     <div class="form-group col-md-4">
-                        <button disabled type="button" class="btn btn-success">Search</button>
+                        <button disabled type="button" class="btn btn-success" id="search-review-btn">Search</button>
                     </div>
                     <div class="row"></div>
                 </div>
@@ -96,19 +96,14 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-12 modules-container text-center warning-box mt20">
-            <div class="col-md-2"></div>
-            <div class="col-md-7">
+        <div class="col-md-12 modules-container text-center warning-box mt20" id="main-review-box">
+            <div class="col-md-12 warning-text-container">
             <h4 id="warning-text">You have not submitted a review yet. To be able to view other user-submitted review, please proceed to make a review first</h4>    
             </div>
-            <div class="col-md-2"></div>
-            <div class="col-md-5"></div>
-            <div class="col-md-2 center form-group">
+            <div class="col-md-12 form-group">
                 <button type="button" class="btn btn-success" id="show-modal-btn">Submit a review</button>
-                <!--<button type="button" class="btn btn-success" id="submit-review">Submit a review</button>-->
             </div>
-            <div class="col-md-5"></div>
-        </div>                
+        </div>                  
     </div>
 </div>
     
