edited login, bugfix for background color

--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
 
 <body>
 	<div class="container center-block">
-		<div class="box login-box animated fadeInUp" id="loginBox">
-<!--
-			<div class="box-header">
-				<h1>NUS Modules Tracker</h1>
-			</div>
--->
+		<div class="boxLogin login-box animated fadeInUp" id="loginBox">
+            
 			<form action="./dashboard.html">
+                <div class="box-header">
+                    <h2>NUS Modules Tracker</h2>
+                </div>
 				<label for="username">NUSNET ID</label>
 				<br/>
 				<input type="text" id="username">
