background resolved + link to reset password website added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<br/>
 				<button class="btn btn-success" id="login-btn" type="submit">Sign In</button>
 				<br/>
-				<a href="#"><p class="small">Forgot your password?</p></a>
+				<a href="https://myaces.nus.edu.sg/passwordreset/index.html"><p class="small">Forgot your password?</p></a>
 				</form>
 		</div>
 	</div>
