--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
 	<div class="container center-block">
 		<div class="boxLogin login-box animated fadeInUp" id="loginBox">
             
-			<form action="./dashboard.html">
+			<form name="Form" action="./dashboard.html">
                 <div class="box-header">
                     <h2>NUS Modules Tracker</h2>
                 </div>
 				<label for="username">NUSNET ID</label>
 				<br/>
-				<input type="text" id="username">
+				<input type="text" name="name" id="username">
 				<br/>
 				<label for="password">Password</label>
 				<br/>
-				<input type="password" id="password">
+				<input type="password" name="id" id="password">
 				<br/>
-				<button class="btn btn-success" id="login-btn" type="submit">Sign In</button>
+				<button class="btn btn-success" id="login-btn" onsubmit="return validateForm()" action="" type="submit">Sign In</button>
 				<br/>
 				<a href="https://myaces.nus.edu.sg/passwordreset/index.html"><p class="small">Forgot your password?</p></a>
 				</form>
@@ -58,7 +58,15 @@
 	$('#password').blur(function() {
 		$('label[for="password"]').removeClass('selected');
 	});
-
+    $('login-btn').click(function(){
+        var username=document.forms["Form"]["name"].value;
+        var password=document.forms["Form"]["id"].value;
+        if (username==null || password==null){
+            alert("Please fill in all required fields");
+            return false;
+        }
+    });
+    
 </script>
 
 </html>
