Fixed bugs and changed user name.

--- a/dashboard.html
+++ b/dashboard.html
@@ -33,7 +33,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="./review.html">Module Reviews</a></li>
             </ul>
-            <p class="navbar-text navbar-right"><a class="navbar-link" href="./index.html">Delon Wong Her Laang - Log out</a></p>
+            <p class="navbar-text navbar-right"><a class="navbar-link" href="./index.html">John - Log out</a></p>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav><!-- /.navbar -->
@@ -149,9 +149,9 @@
             <div class="cap-container col-md-12 box text-center">
                 <h3>Overview</h3>
                 <div class="col-md-6 cap-text text-center">Current CAP :</div>
-                <div class="col-md-6 cap-value text-center js-current-cap"><span id="hidden-cap">(click to show)</span></div>
+                <div class="col-md-6 cap-value text-center js-current-cap"><span id="hidden-cap" class="hidden-cap">(click to show)</span></div>
 
-                <div class="col-md-6 cap-text text-center" id="goal-cap-value">Goal CAP :<br><a href="#" style="font-size: 0.6em;" id="js-edit-goal-cap">Edit</a></div>
+                <div class="col-md-6 cap-text text-center" id="goal-cap-value">Goal CAP :<br><a href="#" style="font-size: 0.6em;" class="js-edit-goal-cap">Edit</a></div>
                 <div class="col-md-6 cap-value text-center js-goal-cap-value"></div>
 
                 <div class="col-md-6 cap-text text-center">Module Credits :</div>
