--- a/review.html
+++ b/review.html
@@ -33,7 +33,7 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="./review.html">Module Reviews</a></li>
             </ul>
-            <p class="navbar-text navbar-right"><a class="navbar-link" href="./index.html">Delon Wong Her Laang - Log out</a></p>
+            <p class="navbar-text navbar-right"><a class="navbar-link" href="./index.html">John - Log out</a></p>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
